--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "2": "^3.0.0",
-    "@google/genai": "^1.27.0",
+    "react-dom": "^19.2.0",
     "framer-motion": "^12.23.24",
-    "lucide-react": "^0.548.0",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "lucide-react": "^0.548.0",
+    "@google/genai": "^1.27.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
